[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
dotenvy = "0.15.7"
dotenvy_macro = "0.15.1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4.39"
entity = { path = "entity" }
migration = { path = "migration" }